# baos

./: Cargo.toml  Cross.toml  Dockerfile  Dockerfile2  README.md  test.py
python_systemd/: j_auf.service  j_auf.timer  j_schatten.service  j_schatten.timer  j_zu.service  j_zu.timer  jauf.py  jschatten.py  jsonne.py  jwetter.py  jzu.py  jzuzu.py
src/: ft12.rs  kdrive.rs  main.rs  mqtt.rs  tcp.rs  tracking.rs  types.rs
